--- a/main.html
+++ b/main.html
@@ -2,11 +2,14 @@
 <html> 
     <head>
         <link rel="stylesheet" href="styles.css">
-        <h1 id="PageTitle">Practice</h1>
+        
     </head>
     <body>
         <script src="script.js"></script>
-<h2 id="TextFromBody">I Hate fronted and I love M4 SopII with my soul</h2>
-        <button id="ShowWife">Want to see my wife?</button>
+        <div id="text">
+            <h1 id="PageTitle">Practice</h1>
+            <h2 id="TextFromBody">I Hate fronted and I love M4 SopII with my soul</h2>
+            <button id="ShowWife">Want to see my wife?</button>
+        </div>
     </body>
 </html>
